# game-backend-template

./: .gitignore  README.md  TODO.md  babel.config.json  gulpfile.js  package.json
src/: App.ts
src/lib/quick-socket/: index.ts
src/lib/socket/: index.ts
src/modules/_lib-test/: Cargo.toml  README.md  package.json
src/modules/hello-socket/src/: lib.rs
src/modules/lib-test/: Cargo.toml
src/modules/lib-test/src/: lib.rs
src/modules/lib-test/src/socket/: mod.rs
src/modules/socket/: Cargo.toml  ideas.txt  index.d.ts
src/modules/socket/src/: lib.rs  main.rs
src/modules/socket/src/app/bridge/: mod.rs
src/modules/socket/src/app/event/: echo.rs  mod.rs
src/modules/socket/src/application/: manager.rs
src/modules/socket/src/error/: mod.rs  predeclared.rs
src/modules/socket/src/js_interface/: mod.rs
src/modules/socket/src/socket_instance/: event.rs  mod.rs
src/modules/socket/src/util/: mod.rs
