[package]
name = "lib-test"
version = "0.1.0"
license = "ISC"
edition = "2018"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version="1", features=["full"]}
portpicker = {version="0.1.1"}

[dependencies.neon]
version = "0.9"
default-features = false
features = ["napi-6"]
